--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     stages{
-        stage ('Inicial'){
+        stage ('Build Image'){
             steps {
                 echo 'OLA MUNDOO'
             }
