--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,35 +15,35 @@ pipeline {
         stage('Install Dependencies') {
             steps {
                 script {
-                    sh 'composer install --no-interaction --prefer-dist --optimize-autoloader'
-                    sh 'npm install'
+                    bat 'composer install --no-interaction --prefer-dist --optimize-autoloader'
+                    bat 'npm install'
                 }
             }
         }
 
         stage('Run Unit Tests') {
             steps {
-                sh 'php artisan test --parallel'
+                bat 'php artisan test --parallel'
             }
         }
 
         stage('Build Docker Image') {
             steps {
-                sh "docker build -t ${DOCKER_IMAGE} ."
+                bat "docker build -t ${DOCKER_IMAGE} ."
             }
         }
 
         stage('Push Docker Image') {
             steps {
                 withDockerRegistry([ credentialsId: 'docker-hub-credentials', url: '' ]) {
-                    sh "docker push ${DOCKER_IMAGE}"
+                    bat "docker push ${DOCKER_IMAGE}"
                 }
             }
         }
 
         stage('Deploy') {
             steps {
-                sh "docker run -d --name techshop-app -p 8000:8000 ${DOCKER_IMAGE}"
+                bat "docker run -d --name techshop-app -p 8000:8000 ${DOCKER_IMAGE}"
             }
         }
     }
