--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage('Build Image') {
             steps {
                 script {
-                    sh 'ls -l' // Lista os arquivos e diretórios
+                    sh 'ls -l' // Executa o comando para listar arquivos e diretórios
                     docker.build("gabriel/techshop-backend", '-f ./app/Dockerfile .')
                 }
             }
