--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,14 +5,7 @@ pipeline {
         stage('Build Image') {
             steps {
                 script {
-                    // Caminho correto do Dockerfile no seu sistema
-                    def dockerfilePath = 'C:/Users/Gabriel Claro/techshop-backend/app'
-
-                    // Forçar uso do comando docker build normal
-                    bat "docker build -t techshop-immagem --file \"${dockerfilePath}/Dockerfile\" ${dockerfilePath}"
-
-                    // (Opcional) Listar as imagens Docker para verificação
-                    bat 'docker images'
+                    dockerapp = docker.build("gabriel/techshop", '-f ./app/Dockerfile ./app')
                 }
             }
         }
