--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,16 +1,19 @@
-# Imagem base com PHP
 FROM php:8.1-apache
+
+# Atualiza o sistema e instala dependências necessárias
+RUN apt-get update && apt-get install -y \
+    git \
+    unzip \
+    curl \
+    ca-certificates \
+    && apt-get install -y composer
+
 
 # Define o diretório de trabalho
 WORKDIR /app
 
-# Copia os arquivos de configuração do projeto (como composer.json, se estiver usando Composer)
-COPY ../../composer.json ./
-
-# Instala as dependências com o Composer, caso necessário
-RUN apt-get update && apt-get install -y git unzip \
-    && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
-    && composer install
+# Copia os arquivos de configuração do projeto
+COPY composer.json ./
 
 # Copia os arquivos do projeto para a imagem
 COPY . .
