--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,16 +1,17 @@
 pipeline {
-    agent any
-    stages {
-        stage('Docker Login') {
-            steps {
-                script {
-                    // Referencia as credenciais salvas
-                    withCredentials([usernamePassword(credentialsId: 'dockerhub', usernameVariable: 'USER', passwordVariable: 'PASSWORD')]) {
-                        // Executa o comando de login
-                        bat 'echo %PASSWORD% | docker login -u %USER% --password-stdin https://index.docker.io/v1/'
-                    }
-                }
-            }
+  agent any
+
+  stages {
+    stage('Docker Login') {
+      steps {
+        withCredentials([usernamePassword(credentialsId: 'dockerhub', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+          bat '''
+            echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+          '''
         }
+      }
     }
+
+    // Outras etapas podem ser adicionadas conforme necessário
+  }
 }
