--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,5 +10,16 @@ pipeline {
                 }
             }
         }
+
+        stage('Push image') {
+           withCredentials([usernamePassword( credentialsId: 'dockerid', usernameVariable: 'USER', passwordVariable: 'PASSWORD')]) {
+        def registry_url = "registry.hub.docker.com/"
+        bat "docker login -u $USER -p $PASSWORD ${registry_url}"
+        docker.withRegistry("http://${registry_url}", "docker-hub-credentials") {
+            // Push your image now
+            bat "docker push username/foldername:build"
+        }
+    }
+}
     }
 }
